# mumble-embedding

./: Cargo.toml  README.md
cdk/: README.md  package.json  pnpm-lock.yaml
cdk/lambda/database/: Cargo.toml
cdk/lambda/database/src/: main.rs
cdk/lib/: cdk-stack.ts
lib/: Cargo.toml  README.md
lib/src/: error.rs  lib.rs  main.rs  markdown.rs  openai.rs  posts.rs  s3.rs  streams.rs  text.rs
src/: error.rs  fs.rs  lib.rs  main.rs  openai.rs  posts.rs  s3.rs  streams.rs
