[package]
name = "mumble-embedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
aws-smithy-runtime-api = "0.56"
base64 = "0.21"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
flechasdb = { version = "0.0.1", path = "../../flechasdb" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
url = "2.4"
