[package]
name = "mumble-embedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
aws-smithy-runtime-api = "0.56"
clap = { version = "4.4", features = ["derive"] }
flechasdb = { git = "https://github.com/codemonger-io/flechasdb.git", tag = "v0.1.0" }
flechasdb-s3 = { git = "https://github.com/codemonger-io/flechasdb-s3.git", tag = "v0.1.0" }
pulldown-cmark = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
url = "2.4"
